# Inshimtu-basic

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  setup.sh
examples/launchers/: cyclone_extract_viewer_big_shaheen.sh  cyclone_extract_viewer_shaheen.sh  cyclone_extract_writer_big_shaheen.sh  launch_inshimtu-build_GDM.sbat  launch_inshimtu-build_VTI.sbat  launch_inshimtu_udj-horizon-testing.sbat  launch_inshimtu_udj-jupiter-testing.sbat  launch_inshimtu_udj-kvl-testing-multirank.sbat  launch_inshimtu_udj-kvl-testing.sbat  launch_inshimtu_udj-shaheen-testing.sbat  launch_inshimtu_udj_wrf-testing_single_writer-multivar.sbat  launch_inshimtu_udj_wrf-testing_single_writer.sbat  launch_inshimtu_udj_wrf-testing_writer-multivar.sbat  launch_inshimtu_udj_wrf-testing_writer.sbat  launch_inshimtu_wrf-testing_dw.sbat  launch_inshimtu_wrf-testing_lustre.sbat  launch_inshimtu_wrf-testing_small_writer_dw.sbat  launch_inshimtu_wrf-testing_small_writer_dw2lustre.sbat  launch_inshimtu_wrf-testing_writer_dw.sbat  launch_udj_flat_testing-v2.sbat  launch_udj_flat_testing.sbat  launch_udj_kvl_testing.sbat  lustre.sbatch  p_qice_z2fe.sh  p_qice_z2fe_mpi.sh  qvapor_allinea.sh  qvapor_allinea_map.sh  qvapor_allinea_report.sh  qvapor_shaheen.sh  qvapor_z2fe.sh  qvapor_z2fe_mpi.sh  simple_udj_jupiter.sbat  wrf.sbatch  wrfrun.sbat  wrfrun_lustre.sbat
examples/launchers/workflow-inshimtu_udj/: consumer_udj.slurm  launch-workflow.sbat  srun_sim.wrf.sh  workflow.wrf-module.init
examples/pipelines/: gridwriter_P.py  gridwriter_QICE.py  gridwriter_QVAPOR.py  gridwriter_QVAPOR_UVW_XLONG_XLAT_Z.py  gridwriter_QVAPOR_XLONG_XLAT_Z.py  gridwriter_U.py  gridwriter_V.py  gridwriter_W.py  gridwriter_XLAT.py  gridwriter_XLONG.py  gridwriter_Z.py  viewer_P_QICE.py  viewer_P_QICE_QVAPOR.py  viewer_P_QICE_QVAPOR_glendon_22222.py  viewer_P_QICE_glendon_22222.py  viewer_P_QICE_nodec.py  viewer_P_QICE_nodec_glendon_22222.py  viewer_P_QICE_nodec_z2fe_22222.py  viewer_QVAPOR_glendon_22222.py  viewer_QVAPOR_z2fe_22222.py  viewer_V.py
examples/pipelines/cyclone_extract/: QICE_isosurface_extractor.py  catalyst_extract_writer_shaheen_full.py
examples/pipelines/cyclone_extract/filters.deprecated/: filter_computeVelocityMagnitude.Script.py  filter_extractCycloneCenter.Script.py  filter_extractU.Script.py
examples/workflows/wrfudj-inshimtu-chapalla/: init_wrf_lustre.sh  launch_wrf_lustre.sh  varnames.txt  workflow.configs
examples/workflows/wrfudj-inshimtu-chapalla/workflow/: launch-workflow.sbat  run_workflow.sh  srun_sim.wrf.sh  workflow.finalize.sh  workflow.initialize.sh  workflow.wrf-module.init
sites/kw61316/: README  setup.sh
sites/shaheen/: png-watchDir-gray-scott.json
sites/shaheen/gray-scott-configs/: gray-scott-1024-png-clip.py  run.sbat
source/: adaptor.cxx  adaptor.h  application.cxx  application.h  coordinator.cxx  coordinator.h  help.cxx  help.h  inporter.cxx  inporter.h  inshimtu.cxx  logger.cxx  logger.h  notification.cxx  notification.h  options.cxx  options.h  pipeline.cxx  pipeline.h  pipeline.hxx
source/core/: application.cxx  application.h  lambda_visitor.hxx  options.cxx  options.h  specifications.cxx  specifications.h
source/processing/: adaptor.cxx  adaptor.h  adaptorV2.cxx  adaptorV2.h  inporter.cxx  inporter.h  pipeline.cxx  pipeline.h  pipeline.hxx  python.cxx
source/processing/inporters/: inporterRawNetCDF.cxx  inporterRawNetCDF.h  inporterXMLImage.cxx  inporterXMLImage.h  inporterXMLPImage.cxx  inporterXMLPImage.h  inporterXMLRectilinear.cxx  inporterXMLRectilinear.h
source/sentinels/: coordinator.cxx  coordinator.h  notification.cxx  notification.h
source/tests/: test.cxx
source/utils/: help.cxx  help.h  logger.cxx  logger.h
testing/configs/: gdm.json  gdm_outready.json  gdm_relpath.json  gridwriter-watchDir-gray-scott.json  gridwriter_enumerated-gray-scott.json  gridwriter_enumerated.json  mitgcm_compress.json  png_enumerated_QVAPOR.json  png_watchDir_QVAPOR.json  png_watchDir_gray-scott.json  png_watchDir_netcdf_QVAPOR.json  vti_notified.json
testing/data/: mitgcm-output.example-ls.txt
testing/data/gray-scott/pvti/: grayScott_step-000010.pvti  grayScott_step-000020.pvti  grayScott_step-000030.pvti  grayScott_step-000040.pvti  grayScott_step-000050.pvti  grayScott_step-000060.pvti  grayScott_step-000070.pvti  grayScott_step-000080.pvti  grayScott_step-000090.pvti  grayScott_step-000100.pvti
testing/data/wrf/: dataoutfile_QVAPOR_02.pvti  dataoutfile_QVAPOR_03.pvti  dataoutfile_QVAPOR_05.pvti  dataoutfile_QVAPOR_09.pvti  dataoutfile_QVAPOR_11.pvti  dataoutfile_QVAPOR_13.pvti  dataoutfile_QVAPOR_14.pvti  launch.conf
testing/launchers/: launch_inshimtu.sbat  launch_inshimtu_CycloneExtract.sbat  launch_inshimtu_GDM.ibex.sbat  launch_inshimtu_GDM.sbat  launch_inshimtu_TestReadyFiles.sbat  launch_inshimtu_devshm.sbat  launch_inshimtu_dw.sbat  launch_inshimtu_kvl.sh  launch_inshimtu_wrf-testing_dw.sbat  launch_inshimtu_wrf-testing_lustre.sbat
testing/launchers/deprecated/: launch_inshimtu_dw.sbat
testing/pipelines/: gridviewer.py  gridviewer_gdm_UVWQVAPOR.py  gridviewer_glendon_22222.py  gridviewer_vti_velocity.py  gridwriter.py  pngQVAPOR.py  pngUVWQVAPOR.py  png_writer_QVAPOR.py  png_writer_clip_uv.py
testing/pipelines/cyclone_extract/: catalyst_extract_viewer.py  catalyst_extract_viewer_PUVWQICE.py  catalyst_extract_writer.py  catalyst_extract_writer_PUVWQICE.py  catalyst_extract_writer_PUVWQICEQGRAUPQRAIN.py  cyclone_initial.pvsm  cyclone_live_viewer_configs.json  cyclone_live_writer_configs.json  cyclone_setup.py  cyclone_test_viewer_configs.json  filter_computeVelocityMagnitude.Script.py  filter_extractCycloneCenter.Script.py  filter_extractP.Script.py  filter_extractQGRAUP.Script.py  filter_extractQICE.Script.py  filter_extractQRAIN.Script.py  filter_extractU.Script.py  filter_extractV.Script.py  filter_extractW.Script.py
testing/pythonic_tests/: mitgcmSpec.py  pythonicSpec.py
testing/scripts/: gridviewer.py
workflow/: README.md  run_inshimtu.sh  run_workflow.sh  srun_inshimtu.sh  srun_sim.mitgcm.sh  srun_sim.wrf.sh
(+412 files in other folders)
